# imaqliq-test-task

./: .gitignore  CMakeLists.txt  README.md  received.txt
src/: client.cpp  client.h  server.cpp  server.h
test/: CMakeLists.txt  test-client.cpp  test-server.cpp
